# sqlmodel-book-sample

./: .gitignore  README.md  pyproject.toml
src/: main.py  models.py
src/sqlmodel_book_sample/: main.py  models.py
src/tests/: conftest.py  test_client.py
tests/: conftest.py  test_client.py
