[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
description = "SQLModel Book Sample"
name = "sqlmodel-book-sample"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiosqlite = "^0"
fastapi = {extras = ["all"], version = "^0"}
greenlet = "^3.0"
python = "^3.12"
sqlalchemy = "^2.0"
sqlmodel = "^0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0"

[tool.mypy]
ignore_missing_imports = true

# [tool.pytest.ini_options]
# addopts = ["-p", "no:warnings"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
