[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi[standard]>=0.115.6",
  "greenlet>=3.1.1",
  "sqlalchemy>=2.0.36",
  "sqlmodel>=0.0.22",
]
description = "SQLModel Book Sample"
license = {text = "Apache-2.0"}
name = "sqlmodel_book_sample"
readme = "README.md"
requires-python = ">=3.12"
version = "0.2.1"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.2",
  "pytest-randomly>=3.16.0",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.pytest.ini_options]
# addopts = ["-p", "no:warnings"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "B008", "CPY", "D", "E501"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
